# bioinfo-tools

./: .gitignore  README.md  main.py  pyproject.toml
applications/nico2_lib/: main.py  pyproject.toml
applications/nico2_lib/src/nico2_lib/: __init__.py  typing.py
applications/nico2_lib/src/nico2_lib/datasets/: __init__.py  _cell_atlases.py  _other.py  _utils.py  _xenium_10x.py
applications/nico2_lib/src/nico2_lib/evaluation_scripts/: 20251009_Evaluation-module_Clustering-knn-ct-class_HH.py
applications/nico2_lib/src/nico2_lib/label_transfer/: __init__.py  _scvi.py  _tacco.py
applications/nico2_lib/src/nico2_lib/metrics/: 20251009_Evaluation-module_Variability_HH.py  20251110_Evaluation-module_NMF-independent_HH.py  __init__.py  _functions.py  functions.py
applications/nico2_lib/src/nico2_lib/predictors/: __init__.py  _baselines.py  _nmf_pred.py  _protocol.py  dominic.py  utils.py
applications/nico2_lib/src/nico2_lib/predictors/_fastica/: _fastica.py
applications/nico2_lib/src/nico2_lib/predictors/_mofaflex/: _mofaflex_pred.py
applications/nico2_lib/src/nico2_lib/predictors/_nmf/: _nmf_pred.py  nmf.py
applications/nico2_lib/src/nico2_lib/predictors/_nn_models/: _base.py  _models.py  _nn.py  _nn_pred.py
applications/nico2_lib/src/nico2_lib/predictors/_pca/: _pca_pred.py
applications/nico2_lib/src/nico2_lib/predictors/_scvi/: _model.py  _nn.py  _scvi.py  _scvi_pred.py
applications/nico2_lib/tests/: test_dominic_predictor.py  test_metrics_shapes.py  test_predictors.py  test_protocol_adapters.py  test_protocol_impl.py
(+63 files in other folders)
