[project]
name = "nico2-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytorch-lightning>=2.5.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tangram-sc>=1.0.4",
    "torch>=2.9.1",
]

[tool.setuptools.packages.find]
where = ["src"]
