[project]
name = "nico2-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.11.4",
    "kneed>=0.8.5",
    "lightning>=2.5.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "spatialdata>=0.5.0",
    "spatialdata-io",
    "tacco>=0.4.0.post1",
    "tangram-sc>=1.0.4",
    "torch>=2.9.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
spatialdata-io = { git = "https://github.com/scverse/spatialdata-io.git" }
